<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:orientation="vertical" >
    
    <!-- wrap_content means, size has to be large enough to keep the content -->
    <ImageView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="50dp"
        android:src="@drawable/ic_launcher"/>
   
    <TextView 
        android:id="@+id/txtv_id_version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textColor="@android:color/white"
        android:textAppearance="@android:attr/textAppearanceLarge"
        android:textStyle="bold"
        android:textSize="15sp"/>
    
    <TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user"/>
    
    <EditText 
        android:id="@+id/user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text">
    	<requestFocus />    
    </EditText>
    
    <TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"/>
    
    <EditText 
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"/>
    
    <CheckBox 
        android:id="@+id/id_keep_connected"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_keep_connected"/>
    
    <Button 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:onClick="submitOnclick"
        android:text="@string/submit"/>
    
</LinearLayout>
