<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#333333"
    android:orientation="vertical" >
    
    <TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/app_name"
        android:textAppearance="?android:attr/textAppearanceLarge"/>
    
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#015488">
        
        <TextView 
            android:id="@+id/new_spending"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:layout_marginLeft="50dp"
            android:clickable="true"
            android:drawableTop="@drawable/new_spending"
            android:onClick="selectOption"
            android:text="@string/new_spending"
            android:textColor="#FFFFFF"
            android:textStyle="bold"/>
        	
        
        <TextView 
            android:id="@+id/new_trip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignTop="@+id/new_spending"
            android:layout_marginRight="50dp"
            android:clickable="true"
            android:drawableTop="@drawable/new_trip"
            android:onClick="selectOption"
            android:text="@string/new_trip"
            android:textColor="#FFFFFF"
            android:textStyle="bold"/>
        
        <TextView 
            android:id="@+id/my_trips"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/new_spending"
           	android:layout_alignParentBottom="true"
            android:layout_marginBottom="120dp"
            android:clickable="true"
            android:drawableTop="@drawable/my_trips"
            android:onClick="selectOption"
            android:text="@string/my_trips"
            android:textColor="#FFFFFF"
            android:textStyle="bold"/>
        
        <TextView 
            android:id="@+id/configs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/my_trips"
           	android:layout_alignRight="@+id/new_trip"
            android:clickable="true"
            android:drawableTop="@drawable/configs"
            android:onClick="selectOption"
            android:text="@string/configs"
            android:textColor="#FFFFFF"
            android:textStyle="bold"/>
        
    </RelativeLayout>

</LinearLayout>
